--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <article class="hero"></article>
 
     <main class="container">
-        <section class="content"> 
+        <section class="content" id="search-engine-optimization"> 
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization image" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -36,7 +36,7 @@
             </p>
         </section>
 
-        <section class="content"> 
+        <section class="content" id="online-reputation-management"> 
             <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management image" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -44,7 +44,7 @@
             </p>
         </section>
 
-        <section class="content"> 
+        <section class="content" id="social-media-marketing"> 
             <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing image" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
